--- a/deno.json
+++ b/deno.json
@@ -13,6 +13,7 @@
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
+    "@nick/clsx": "jsr:@nick/clsx@^0.3.1",
     "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.0.14",
     "@types/react": "npm:@types/react@^19.0.10",
     "@types/react-dom": "npm:@types/react-dom@^19.0.4",
@@ -21,6 +22,7 @@
     "prettier-plugin-tailwindcss": "npm:prettier-plugin-tailwindcss@^0.6.11",
     "react": "npm:react@^19.0.0",
     "react-dom": "npm:react-dom@^19.0.0",
+    "tailwind-merge": "npm:tailwind-merge@^3.0.2",
     "tailwindcss": "npm:tailwindcss@^4.0.14",
     "vite": "npm:vite@^6.1.1"
   },
